--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -41,6 +41,7 @@
   color: var(--main-grey);
   margin-left: 30px;
   transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .contactoBtn:hover {
